# ai_agent

ai-agent/: BUGFIX_REPORT.md  Dockerfile  README.md  __init__.py  agent.py  app.js  base.html  chat.js  chat_feature.py  chat_init.py  components_init.py  config.py  context_manager.py  dark.css  docker-compose.yml  editor.js  editor_feature.py  editor_init.py  ensemble.js  features_init.py  index.html  main.py  partials_init.py  provider_manager.py  pyproject.toml  requirements.txt  search.js  setup.py  sidebar.js  statusbar.js  terminal_feature.py  terminal_init.py  themes_init.py  web_app.py
ai-agent/composer/: batch_editor.py
ai-agent/desktop/: package.json
ai-agent/lsp/: client.py
ai-agent/mcp/: client.py  mcp_bridge.py
ai-agent/memory/: vector_store.py
ai-agent/metrics/: cost_tracker.py
ai-agent/modes/: __init__.py  autonomous.py  interactive.py
ai-agent/providers/: __init__.py  base.py  base_provider.py  debug_analyzer.py  ensemble_provider.py  nvidia_nim.py  ollama.py  openrouter.py  provider_manager_v6.py  vllm_provider.py
ai-agent/security/: __init__.py  guardian.py
ai-agent/swarm/: orchestrator.py  orchestrator_v2.py  orchestrator_v3.py  role_assigner.py
ai-agent/tests/: conftest.py  test_providers.py  test_tools.py  test_validator.py
ai-agent/tools/: __init__.py  advanced_tools.py  base.py  cursor_tools.py  diff_tool.py  file_tools.py  git_tools.py  multimodal_tools.py  orchestrator_tools.py  security_tools.py  shell_tools.py  tool_picker.py
ai-agent/tui/: app.py
ai-agent/validator/: __init__.py  project_validator.py
(+13 files in other folders)
