[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "2.0.0"
description = "Multi-provider AI coding agent with auto-failover, diff editing, swarm orchestration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Agent Team"}
]
keywords = ["ai", "agent", "coding", "llm", "openrouter", "nvidia", "ollama", "swarm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.8.0",
    "python-dotenv>=1.0.0",
    "textual>=0.47.0",
    "sentence-transformers>=2.5.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "black>=23.0.0",
]
web = [
    "eventlet>=0.33.0",
    "gunicorn>=21.0.0",
]

[project.scripts]
ai-agent = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["providers*", "tools*", "modes*", "validator*", "web*", "swarm*", "metrics*", "memory*", "mcp*", "tui*"]
